# TriBITS

./: .travis.yml  CONTRIBUTING.md  ProjectName.cmake
doc/: TribitsDeveloperGettingStarted.rst
test/: CMakeLists.txt
test/ci_support/: CDashQueryAnalyzeReport_UnitTests.py  CDashQueryPassFail_UnitTests.py  CheckinTest_UnitTests.py  ExtractCDashInfo_UnitTest.py  cdash_analyze_and_report_UnitTests.py
test/ci_support/DumpXmlDepsTests/: CMakeLists.txt
test/core/: CMakeLists.txt  TestingFunctionMacro_UnitTests.cmake  TribitsAdjustPackageEnablesHelpers.cmake  TribitsAdjustPackageEnables_UnitTests.cmake  TribitsExternalPackageWriteConfigFile_UnitTests.cmake  TribitsProcessExtraRepositoriesList_UnitTests.cmake  TribitsProcessPackagesAndDirsLists_UnitTests.cmake  TribitsReadAllProjectDepsFilesCreateDepsGraph_UnitTests.cmake  TribitsWriteExternalPackageConfigFile_UnitTests.cmake
test/core/CTestScriptsUnitTests/: CMakeLists.txt
test/core/DependencyUnitTests/: CMakeLists.txt  DepTests_EnableAllPackages_DumpDependencies.txt
test/core/ExamplesUnitTests/: CMakeLists.txt  TribitsExampleApp_Tests.cmake  TribitsExampleProject2_Tests.cmake  TribitsExampleProject_Tests.cmake
test/core/ExamplesUnitTests/PkgWithSubpkgsWithUserErrors/: CMakeLists.txt
test/core/ExamplesUnitTests/PkgWithUserErrors/: CMakeLists.txt
test/ctest_driver/: CMakeLists.txt
test/ctest_driver/MockCTestDriver/: CMakeLists.txt
test/ctest_driver/TribitsExampleProject/: CMakeLists.txt
test/python_utils/: gitdist_UnitTests.py
tribits/core/dummy_install_subdir/: CMakeLists.txt
(+124 files in other folders)
